Addressed remaining comments, except three of them.

--- a/response.tex
+++ b/response.tex
@@ -170,18 +170,18 @@ In this paper, the researchers present a new seismic hazard analysis of northern
 The authors present uncertainty in their hazard estimate but do not include a more exhaustive logic tree analysis. Effectively, they have two branches: a regional model and uniform model. It appears that they apply the aleatory uncertainty in the ground motion prediction relation to a form of epistemic uncertainty, effectively double counting this uncertainty in the hazard analysis. I would prefer to see a more standard logic tree analysis where multiple GMPEs (or a backbone plus and minus one standard deviation) and uncertainty in a-value, b-value, and Mmax, for example, are considered. Barring this analysis, I would remove figure 10 and references to hazard uncertainty.
 }
 
-\response{Thanks for the comment.  Based on explanation of GMPEs section (please see comment no.?) we decided to define a suite of GMPE as well as plus and minus one standard deviation. We consider the epistemic uncertainty in tectonic seismic regions, $M_{max}$, $b-value$, and attenuation relationship through a standard logic tree analysis.}. 
+\response{Thanks for the comment.  Based on explanation of GMPEs section (please see comment no.27) we decided to define a suite of GMPE as well as plus and minus one standard deviation. We consider the epistemic uncertainty in tectonic seismic regions, $M_{max}$, $b-value$, and attenuation relationship through a standard logic tree analysis.}. 
 
 \comment{2}{%
 While I think that the regional and uniform models are generally correct within 1.5 degrees of the border, I think that outside of this region, they may be moderately underestimating hazard by not considering sources with 200 km of their region of interest. Their buffer zone for sources is presently 50 km.
 }
 
-\response{That is right. We increased the buffer zone up to 2 degrees. (Haven't modified the text)}
+\response{That is right. We increased the buffer zone up to 2 degrees.}
 
 \comment{3}{%
 It would be good if the abstract is more specific about the results. Where is the hazard greatest? What sources contribute to regions of higher hazard?
 }
-\response{Response will be here.}
+\response{Added to the abstract.}
 
 \comment{4}{%
 In the second paragraph of the introduction, I would include a reference to a figure of the region to help readers less familiar with the area. This figure should also be referred to in subsequent paragraphs. It is probably sufficient to move reference to figure 1 here.
@@ -206,7 +206,7 @@ line 56 $\to$ Please be more specific about how your analysis differs from previ
 \comment{8}{%
 line 60 $\to$ Can you be more specific? What are the other indicators?
 }
-\response{Response will be here.}
+\response{We discussed this before. We need to remove the sentence and rewrite that part.}
 
 \comment{9}{%
 line 71 $\to$ Include reference? Include reference.
@@ -221,7 +221,7 @@ line 78 $\to$ reduce $\to$ acknowledge
 \comment{11}{%
 line 99 $\to$ Is 0.5 degrees enough? To what distance do you do your ground motion calculations? In the western United States, they are done to 200 km. In the central and eastern, they are done to 1000 km. Depending on this value, you should include sources up to this distance from your region of interest.
 }
-\response{We reanalyze the hazard with 2 degrees buffer zone. (Not modified in the text.)}
+\response{We reanalyze the hazard with 2 degrees buffer zone. }
 
 \comment{12}{%
 line106 $\to$ northeast $\to$ northwest
@@ -251,7 +251,7 @@ line 192 $\to$ What is the total number of events before and after declustering?
 \comment{17}{%
 line 224 $\to$ Why did you use this method? What are the benefits of one or the other?
 }
-\response{Response will be here.}
+\response{Both methods have been used extensively in previous studies. We just picked one. Text was implying that this method has beneficial to the ZMAP method, we fixed it. Thanks.}
 
 \comment{18}{%
 line 232 $\to$ It is unclear how you chose Mc. In some cases, it looks like you chose the peak goodness-of-fit value, but in others you did not. Please be more specific about how Mc was chosen.
@@ -301,7 +301,7 @@ line 361 $\to$ lead $\to$ leads
 \comment{27}{%
 line 364 $\to$ How do you address the epistemic uncertainty generally introduced by using a suite of GMPEs?
 }
-\response{As mentioned in Atkinson and Adam (2013) and Atkinson et al (2014), using different GMPEs with different logic tree weights from different literature is not necessarily the best way to model the epistemic uncertainty in GMPEs. We prefer to use the alternative GMPEs and applicable data to guide the choice of a representative or ?central? GMPE, and to define representative (upper and lower) GMPEs that express uncertainty about the central GMPE. In the previeous study (Khodaverdian 2016), they used Akkar and Bommer (2010) and Ghasemi et al (2009) along side other equations. Akkar and Bommer (2010) derived the equation up to 100 Km, which they used for 200 km. Also Ghasemi et al (2009) is presented the coefficients for spectral acceleration not PGA. Of course this alternative method has been a hotly-debated topic, and there is no clear consensus about that, however, the plots of attenuation relationships in different magnitude illustrate the fact that with this approach we can address the epistemic uncertainty in an acceptable range. We totally agree with the reviewer?s comment that presenting the seismic hazard with upper and lower values (Fig 10) to address the epistemic uncertainty could be misleading for the readers. In order to address these concerns, we do the seismic hazard analysis for bigger domain (2 degrees buffer zone) and combine the results according to the logic tree scheme in Fig X.}
+\response{As mentioned in Atkinson and Adam (2013) and Atkinson et al (2014), using different GMPEs with different logic tree weights from different literature is not necessarily the best way to model the epistemic uncertainty in GMPEs. We prefer to use the alternative GMPEs and applicable data to guide the choice of a representative or central GMPE, and to define representative (upper and lower) GMPEs that express uncertainty about the central GMPE. In the previeous study (Khodaverdian 2016), they used Akkar and Bommer (2010) and Ghasemi et al (2009) along side other equations. Akkar and Bommer (2010) derived the equation up to 100 Km, which they used for 200 km. Also Ghasemi et al (2009) is presented the coefficients for spectral acceleration not PGA. Of course this alternative method has been a hotly-debated topic, and there is no clear consensus about that, however, the plots of attenuation relationships in different magnitude illustrate the fact that with this approach we can address the epistemic uncertainty in an acceptable range. We totally agree with the reviewer's comment that presenting the seismic hazard with upper and lower values (Fig 10) to address the epistemic uncertainty could be misleading for the readers. In order to address these concerns, we do the seismic hazard analysis for bigger domain (2 degrees buffer zone) and combine the results according to the logic tree scheme in Fig 9.}
 
 \comment{28}{%
 line 365: add 'and'
@@ -316,7 +316,7 @@ line 370 $\to$ Could you consider other depths to help fill out your range of ep
 \comment{30}{%
 line 371 $\to$ How does this value compare with the models you decided not to use?
 }
-\response{Response will be here.}
+\response{In revised version. We used backbone and plus and minus one standard deviation as three GMPEs. }
 
 \comment{31}{%
 line 376 $\to$ In this case, you should consider all sources with 200 km of your area of interest.
@@ -336,12 +336,12 @@ line 420: with concentration $\to$ with a concentration
 \comment{34}{%
 line 422 $\to$ I would have stated this differently. It looks like the lower b-value in Kopeh Dagh yields relatively high hazard in the R model whereas in the U model, this low b-value has leaked into the entire region and subsequently elevated seismic hazard in all areas outside of Kopeh Dagh.
 }
-\response{Response will be here.}
+\response{Based on the modification in GMPEs and uncertainties at the revised version, we rewrite the description part.}
 
 \comment{35}{%
 line 428 $\to$ Why equal weights?
 }
-\response{We added a comprehensive logic tree analysis after revision and modified the weights. Please see the text.}
+\response{We added a comprehensive logic tree analysis after revision and modified the weights. Please see figure 9.}
 
 \comment{36}{%
 line 431 $\to$ I'm not sure I quite understand this. The standard deviation in the attenuation relation is considered aleatory uncertainty and is present within the hazard curve. Adding it as epistemic as well will cause double counting. If you want to include figure 10, a proper logic tree analysis to include more forms of epistemic uncertainty should be performed. For example, add branches for uncertainty in which GMPE you choose, uncertainty in b-value, uncertainty in Mmax, uncertainty in a-value, uncertainty in smoothing parameter, etc.
@@ -351,7 +351,7 @@ line 431 $\to$ I'm not sure I quite understand this. The standard deviation in t
 \comment{37}{%
 line 434 $\to$ Just because the basic pattern appears to better follow faults in the region does not mean it's a better assessment, especially if the b-values are truly different between regions and better represented by the regional analysis.
 }
-\response{Response will be here.}
+\response{That's right. Removed that part. Thanks.}
 
 \comment{38}{%
 line 439: of city of Tabriz $\to$ of the city of Tabriz.
@@ -387,91 +387,72 @@ line 461: our results are close or within $\to$ our results are close to or with
 \comment{44}{%
 line 462 $\to$ Can you explain the differences in their analysis relative to yours that lead to higher values?
 }
-\response{Response will be here.}
+\response{They used Maximum Credible Earthquake as $M_{max}$. The maximum credible earthquake is largest earthquake that appears capable of occurring under the known tectonic framework for a specific fault or seismic source, as based on geologic and seismologic data, so it is higher than observation or data driven $M_{max}$. }
 
 \comment{45}{%
-line 466 $\to$ exceedance as functions of PGA ? exceedance as functions of PGA, also known as hazard curves}
+line 466: exceedance as functions of PGA  $\to$ exceedance as functions of PGA, also known as hazard curves}
 \response{Added. Thanks.}
 
 \comment{46}{%
 line 475 $\to$ Can you explain the differences in the hazard analysis that led to differences in hazard?}
 \response{Response will be here.}
 
-\comment{47}{%
-line 462 $\to$ Can you explain the differences in their analysis relative to yours that lead to higher values?
-}
-\response{Response will be here.}
 
-\comment{48}{%
+\comment{47}{%
 lline 488 $\to$ Not sure you can say this because you don't include fault specific sources, and you do not consider a more full range of epistemic uncertainty, e.g. you only use one GMPE (though you do consider two b-value and Mmax based models).
 }
 \response{Response will be here.}
 
-\comment{49}{%
+\comment{48}{%
 line 488:  hazard analysis $\to$ hazard analyses
 }
 \response{Done.}
 
-\comment{50}{%
+\comment{49}{%
 line 490: models as a mean $\to$ models as a means}
 \response{Done.}
 
-\comment{51}{%
+\comment{50}{%
 line 493 $\to$ Though you suggest the uniform model is unrealistic on line 334.}
-\response{Response will be here.}
+\response{That's right. We meant to say less realistic. We fixed the text.}
 
-\comment{52}{%
+\comment{51}{%
 line 502 $\to$ for providing advise ? for providing advice}
 \response{Done.}
 
-\comment{53}{%
+\comment{52}{%
 line 509 $\to$  Should this be Sunset?}
 \response{Yes. Thanks.}
 
-\comment{54}{%
+\comment{53}{%
 p 25, table2 $\to$ What did you do for the earthquakes occurring outside of these five zones?}
 \response{There are earthquakes out of the regions, mainly above the Caspian see. Since those area are not in our region of interest (They mainly are in country of Azerbaijan), and are fairly far from our region, we ignored them.}
 
-\comment{55}{%
+\comment{54}{%
 p 26, table3 $\to$ Specify units.}
 \response{Done. Thanks.}
 
-\comment{56}{%
+\comment{55}{%
 p32, figure 3 $\to$ You should also show events in the buffer zone used to compute hazard.}
 \response{Done.}
 
-\comment{57}{%
+\comment{56}{%
 p34, figure 5 $\to$ Which seismic zone corresponds to which color? It looks like either reporting or rates have changed over time. For example, I might argue that the red region was not complete for M3 and above until 2005. }
 \response{Thanks for the comment. The problem with that region is having less than and equal sign on magnitude 4. There are many earthquakes go to that category because of that condition. Since, converting earthquake magnitude always has an error margin, we think the comment is relevant. Based on the data we assume 2005 as a completeness magnitude. We presented the legends at the bottom of the figure.}
 
-\comment{58}{%
+\comment{57}{%
 P37: 10 percent of probability $\to$ 10 percent probability }
-\response{Response will be here.}
+\response{Done.}
 
-\comment{59}{%
+\comment{58}{%
 p 39,figure 11: Include horizontal lines indicating 2 and 10\% probability of exceedance in 50 years.}
 \response{Included.}
 
-\comment{60}{%
+\comment{59}{%
 p 41, figure 12: Can you include curves or points for the other studies in Table 3?}
 \response{Added.}
 
 
-\introcomment{~}{%
-Summary of modifications (May or may not addressed as comment.)\\
-- Buffer zone updated.\\
-- Data updated.\\
-- b-values updated.\\
-- Completeness parameters updated.\\
-- Figure 1: Buffer Zone Updated.\\
-- Figure 3: Seismicity.sh modified. Historical.txt and Instrumental.txt updated to new data. \\
-- Figure 4: Updated.\\
-- Figure 5: The excel file is updated. The figure needs to be updated.\\
-- Figure 6: Updated data completeness plots added to the figure. Figure needs final polishing. \\
-- Figure 7: Updated.\\
-- Figure 11: Updated.\\ 
-- Figure 8: Updated.\\
-- Figure 10: Updated.\\
-}
+
 
 \end{document}
