--- a/introduction.tex
+++ b/introduction.tex
@@ -7,11 +7,11 @@ The Iranian plateau is located on the Himalayan-Alpine seismic belt. It is confi
 
 According to this tectonic setting and the geologic provinces of the plateau, Iranian earthquakes have been categorized into various seismic zones, ranging from the definition of four to nine major seismic zones in the more traditional studies \citep[e.g.,][]{Stocklin1968, Takin1972, Berberian1976}, and up to twenty to twenty-three seismotectonic provinces in the most elaborate ones \citep[e.g.,][]{Nowroozi1976, Tavakoli1999}. Contemporary, well-accepted models divide Iran into five major tectonic regions: Azerbaijan-Alborz, Kopeh-Dagh, Zagros, Central-East Iran, and Makran \citep[e.g.,][]{Mirzaei1998}. More recently, in a study aimed to develop a uniform earthquake catalog for Iran, \citet{Karimiparidari2013} further divided the Azerbaijan-Alborz region into two separate seismic zones: Azerbaijan and the Alborz Mountain Range, hereafter referred to simply as Alborz. We adopt the latter definition of six seismic zones and focus our attention on those most relevant to the northern part of the country, Azerbaijan, Alborz and Kopeh-Dagh.
 
-Over the last three decades there have been multiple efforts to better estimate the seismic parameters and hazard, and improve the assessment of seismic risk in Iran \citep[e.g.,][]{Tavakoli1999, Moinfar_2000_Chap, Ghodrati2003, Moinfar_2012_WCEE, Khodaverdian_2016_BSSA}. The most recent of these studies \citep{Khodaverdian_2016_BSSA} focuses \myrevision{on} the estimation of spatially-variable seismic parameters for the whole country using a similar approach to the one we used here. We, however, focus our attention in the northern three seismic zones of the country assuming regionally-based and smoothed seismic parameters. Altogether, these previous studies have helped improve the Iranian Code of Practice for Seismic Resistant Design of Buildings \citep{BHRC2014}. Such improvements are reflected in lower overall expected damage ratios, as reported by \citet{Ghodrati2013} for the city of Tehran. However, other indicators suggest persistent high levels of seismic risk. Therefore, more complete and accurate assessments of seismic hazard---incorporating the latest available data and alternative methods---are still necessary.
+Over the last three decades there have been multiple efforts to better estimate the seismic parameters and hazard, and improve the assessment of seismic risk in Iran \citep[e.g.,][]{Tavakoli1999, Moinfar_2000_Chap, Ghodrati2003, Moinfar_2012_WCEE, Khodaverdian_2016_BSSA}. The most recent of these studies \citep{Khodaverdian_2016_BSSA} focuses \myrevision{on} the estimation of spatially-variable seismic parameters for the whole country using a similar approach to the one we used here. We, however, focus our attention in the northern three seismic zones of the country assuming regionally-based and smoothed seismic parameters. \myrevision{We used two regional and uniform model based on considering of uncertainty in ground motion level, $b-value$, and $M_{max}$, using the most updated seismic catalog of the region. For the regional model we assumed uniform $b-value$ for each region.} Altogether, these previous studies have helped improve the Iranian Code of Practice for Seismic Resistant Design of Buildings \citep{BHRC2014}. Such improvements are reflected in lower overall expected damage ratios, as reported by \citet{Ghodrati2013} for the city of Tehran. However, other indicators suggest persistent high levels of seismic risk. Therefore, more complete and accurate assessments of seismic hazard---incorporating the latest available data and alternative methods---are still necessary.
 
 Northern Iran houses about 41 percent (32 million) of the total population of the country in the cities of Tehran, Mashhad, Tabriz, Karaj, Qom, Urmia, Rasht, and Ardabil. This region has suffered devastating effects of earthquakes in the past \citep[e.g.,][]{Mehrain_1990_Tech, Chafory-Ashtiany_1999_DPM, Razzaghi_2012_Tech}. Due to its importance, northern Iran has recently been the subject of various efforts to better characterize seismic hazard \citep[e.g.,][]{Abdollahzadeh2014a, Boostan2015}. Among other things, these studies have highlighted the prevailing differences between studies, the importance of quantifying uncertainties, and the need for considering all potential faults in the region---even if believed inactive---by adopting new methodologies and the latest available data.
 
-\myrevision{Most previous studies focus on particular locations  based on specific categorization of seismogenic faults \citep[e.g.][]{Ghodrati2003,Vafaie2011,Abdi2013}, which are often subjectively interpreted and limited to data availability.} We use the smoothed seismicity method introduced by \citet{Frankel1995}. This approach has been used with success in other regions \citep[e.g.][]{Cao1996, Akinci2004, Kalkan2009}, including Iran \citep{Khodaverdian_2016_BSSA}. \myrevision{In \citep{Khodaverdian_2016_BSSA}, seismicity parameters like $b-value$ and $M_{max}$ are calculated for sites equally distributed all over the Iran on a grid 1*1 degree. Earthquake catalog for each grid point is all events within 200 km buffer zone surrounding the grid point. Whereas in this study, we assume the seismic parameters are uniform for each tectonic seismic region.} Its major feature is the treatment of cataloged instrumental and historical earthquakes as individual point sources as opposed to events that are part of a predefined system of faults in a given tectonic setting. While we recognize that \myrevision{fault-based/geologic-based earthquake recurrence estimates } can be more realistic and accurate, by choosing the smoothed seismicity method we seek to \myrevision{acknowledge} the uncertainty associated with fault mapping, earthquake location and source mechanism definitions, and to cover areas that would otherwise be underestimated or ignored. In our analysis, we assume earthquake hazard in northern Iran to be dominated by the seismic zones of Azerbaijan, Alborz, and Kopeh-Dagh, but also consider the contribution of the areas of Zagros and the central-east seismic zones to the hazard calculation within our domain of interest (see Fig.~\ref{fig:iran}). In addition to this five seismic-zone model, we obtain results for the entire region of interest as if it could be considered as a single uniform seismic zone. We used both these models and the combination of them to interpret seismic hazard in northern Iran.
+\myrevision{Most previous studies focus on particular locations  based on specific categorization of seismogenic faults \citep[e.g.][]{Ghodrati2003,Vafaie2011,Abdi2013}, which are often subjectively interpreted and limited to data availability.} We use the smoothed seismicity method introduced by \citet{Frankel1995}. This approach has been used with success in other regions \citep[e.g.][]{Cao1996, Akinci2004, Kalkan2009}, including Iran \citep{Khodaverdian_2016_BSSA}. \myrevision{In \citep{Khodaverdian_2016_BSSA}, seismicity parameters like $b-value$ and $M_{max}$ are calculated for sites equally distributed all over the Iran on a grid 1*1 degree. Earthquake catalog for each grid point is all events within 200 km buffer zone surrounding the grid point. Whereas in this study, we assume the seismic parameters are uniform for each tectonic seismic region.} Its major feature is the treatment of cataloged instrumental and historical earthquakes as individual point sources as opposed to events that are part of a predefined system of faults in a given tectonic setting. While we recognize that \myrevision{fault-based/geologic-based earthquake recurrence estimates} can be more realistic and accurate, by choosing the smoothed seismicity method we seek to \myrevision{acknowledge} the uncertainty associated with fault mapping, earthquake location and source mechanism definitions, and to cover areas that would otherwise be underestimated or ignored. In our analysis, we assume earthquake hazard in northern Iran to be dominated by the seismic zones of Azerbaijan, Alborz, and Kopeh-Dagh, but also consider the contribution of the areas of Zagros and the central-east seismic zones to the hazard calculation within our domain of interest (see Fig.~\ref{fig:iran}). In addition to this five seismic-zone model, we obtain results for the entire region of interest as if it could be considered as a single uniform seismic zone. We used both these models and the combination of them to interpret seismic hazard in northern Iran.
 
 In the following sections we describe our region of interest in greater detail, review its associated tectonics and seismicity, and provide additional information about the adopted approach. Significant aspects of our work include the composition of the earthquake catalog, including catalog completeness and the conversion of earthquake magnitudes, the selection of an appropriate attenuation relationship for the region, and the estimation of the Gutenberg-Richter seismicity parameters. Our analysis includes seismic hazard curves and maps for peak ground acceleration (PGA) considering exceedance probabilities of 2 and 10 percent in 50 years for rock site conditions for events with moment magnitude \myrevision{$M_w \geq 4.5$}. We analyze our results in light of similar estimates available in the literature and summarize the most relevant conclusions.
 
