--- a/references.bib
+++ b/references.bib
@@ -137,6 +137,26 @@
   Address                  = {Cambridge, United Kingdom}
 }
 
+@Article{Atkinson2014,
+  Title                    = {Alternative Approaches to Modeling Epistemic Uncertainty in Ground Motions in Probabilistic Seismic-Hazard Analysis},
+  Author                   = {Atkinson, G. M. and Bommer, J. J. and Abrahamson, N. A.},
+  Journal                  = {Seismological Research Letters},
+  Year                     = {2014},
+
+  Month                    = {Oct},
+  Number                   = {6},
+  Pages                    = {1141–1144},
+  Volume                   = {85},
+
+  __markedentry            = {[naeem:6]},
+  Doi                      = {10.1785/0220140120},
+  ISSN                     = {1938-2057},
+  Owner                    = {naeem},
+  Publisher                = {Seismological Society of America (SSA)},
+  Timestamp                = {2016.10.19},
+  Url                      = {http://dx.doi.org/10.1785/0220140120}
+}
+
 @Book{Baker2008,
   Title                    = {An introduction to probabilistic seismic hazard analysis ({PSHA})},
   Author                   = {Baker, Jack W},
@@ -860,6 +880,7 @@
   Number                   = {6},
   Pages                    = {2928--2941},
   Volume                   = {105},
+
   Doi                      = {10.1785/0120140370},
   Publisher                = {Seismological Society of America ({SSA})},
   Url                      = {http://dx.doi.org/10.1785/0120140370}
@@ -881,6 +902,7 @@
   Number                   = {3},
   Pages                    = {1065--1080},
   Volume                   = {7},
+
   Doi                      = {10.1080/19475705.2015.1030785},
   Publisher                = {Taylor \& Francis}
 }
@@ -916,6 +938,7 @@
   Number                   = {S1},
   Pages                    = {S1--S30},
   Volume                   = {31},
+
   Doi                      = {10.1193/120814eqs210m},
   Publisher                = {Earthquake Engineering Research Institute},
   Url                      = {http://dx.doi.org/10.1193/120814EQS210M}
@@ -1011,18 +1034,18 @@
   Timestamp                = {2016.01.15}
 }
 
-@Article{Soghrat2011,
+@Article{Soghrat2012,
   Title                    = {Simulation of strong ground motion in northern {Iran} using the specific barrier model},
   Author                   = {Soghrat, M. R. and Khaji, N. and Zafarani, H.},
   Journal                  = {Geophysical Journal International},
-  Year                     = {2011},
+  Year                     = {2012},
 
   Month                    = {Dec},
   Number                   = {2},
   Pages                    = {645–679},
   Volume                   = {188},
 
-  __markedentry            = {[naeem:6]},
+  __markedentry            = {[naeem:]},
   Doi                      = {10.1111/j.1365-246x.2011.05287.x},
   ISSN                     = {0956-540X},
   Owner                    = {naeem},
@@ -1119,8 +1142,6 @@
   Number                   = {4},
   Pages                    = {1630–1648},
   Volume                   = {101},
-
-  __markedentry            = {[naeem:]},
   Doi                      = {10.1785/0120090340},
   ISSN                     = {0037-1106},
   Owner                    = {naeem},
@@ -1208,4 +1229,12 @@
   Publisher                = {Springer}
 }
 
+@Book{Boyd2007,
+  Title                    = {Preliminary Earthquake Hazard Map of {A}fghanistan},
+  Author                   = {Boyd, Oliver S and Mueller, Charles S and Rukstales, Kenneth},
+  Publisher                = {US Geological Survey},
+  Year                     = {2007}
+}
+
 @comment{jabref-meta: databaseType:biblatex;}
+
