--- a/response.tex
+++ b/response.tex
@@ -42,7 +42,7 @@ Pp 3, line 77: Fault-based/geologic-based earthquake recurrence estimates
 }
 
 \response{%
-Response will be here.
+Added thanks.
 }
 
 \comment{3}{%
@@ -58,7 +58,7 @@ Pp 6, line 168: It would be good to add a reference for the GEM effort.
 }
 
 \response{%
-Ricardo, I couldn't find any paper or report as a reference in their website. Please see. 
+Added. Thanks.
 }
 
 \comment{5}{%
@@ -74,7 +74,7 @@ Pp7-8: The authors should note that some authors use an alternative smoothing ke
 }
 
 \response{%
-Added. Thanks. (No need to add more explanation. Please see the email.)
+Added. Thanks. 
 }
 
 
@@ -118,7 +118,7 @@ Figure 7: Is the magnitude-frequency distribution just a truncated (Mmin, Mmax) 
 }
 
 \response{%
-Yes it is truncated GR model. (Figure caption is not fixed yet.)
+Yes it is truncated GR model. 
 }
 
 \comment{11}{%
@@ -201,8 +201,7 @@ line 55   focuses in $\to$ focuses on
 \comment{7}{%
 line 56 $\to$ Please be more specific about how your analysis differs from previous analyses.
 }
-\response{Response will be here.}
-
+\response{In the introduction we explain the method and parameters here and there, however, we added a couple of sentences to briefly explain the method. Thanks}
 \comment{8}{%
 line 60 $\to$ Can you be more specific? What are the other indicators?
 }
@@ -296,7 +295,7 @@ line 337 $\to$ a means to reduce epistemic $\to$ a means to account for epistemi
 \comment{26}{%
 line 361 $\to$ lead $\to$ leads
 }
-\response{Two reviewer suggested two different word. Both of them are correct. Please see.}
+\response{Fixed. Thanks.}
 
 \comment{27}{%
 line 364 $\to$ How do you address the epistemic uncertainty generally introduced by using a suite of GMPEs?
@@ -316,7 +315,7 @@ line 370 $\to$ Could you consider other depths to help fill out your range of ep
 \comment{30}{%
 line 371 $\to$ How does this value compare with the models you decided not to use?
 }
-\response{In revised version. We used backbone and plus and minus one standard deviation as three GMPEs. }
+\response{In the revised version we used backbone and plus and minus one standard deviation as three GMPEs. }
 
 \comment{31}{%
 line 376 $\to$ In this case, you should consider all sources with 200 km of your area of interest.
@@ -387,7 +386,7 @@ line 461: our results are close or within $\to$ our results are close to or with
 \comment{44}{%
 line 462 $\to$ Can you explain the differences in their analysis relative to yours that lead to higher values?
 }
-\response{They used Maximum Credible Earthquake as $M_{max}$. The maximum credible earthquake is largest earthquake that appears capable of occurring under the known tectonic framework for a specific fault or seismic source, as based on geologic and seismologic data, so it is higher than observation or data driven $M_{max}$. }
+\response{They used Maximum Credible Earthquake as $M_{max}$. The maximum credible earthquake is largest earthquake that appears capable of occurring under the known tectonic framework for a specific fault or seismic source, as based on geologic and seismologic data, so it is higher than observation or data driven $M_{max}$. We added the explanation to the text. }
 
 \comment{45}{%
 line 466: exceedance as functions of PGA  $\to$ exceedance as functions of PGA, also known as hazard curves}
@@ -395,13 +394,13 @@ line 466: exceedance as functions of PGA  $\to$ exceedance as functions of PGA, 
 
 \comment{46}{%
 line 475 $\to$ Can you explain the differences in the hazard analysis that led to differences in hazard?}
-\response{Response will be here.}
+\response{Added to the text.}
 
 
 \comment{47}{%
 lline 488 $\to$ Not sure you can say this because you don't include fault specific sources, and you do not consider a more full range of epistemic uncertainty, e.g. you only use one GMPE (though you do consider two b-value and Mmax based models).
 }
-\response{Response will be here.}
+\response{That is right. We restate the sentence. Thanks.}
 
 \comment{48}{%
 line 488:  hazard analysis $\to$ hazard analyses
