--- a/completeness.tex
+++ b/completeness.tex
@@ -12,7 +12,7 @@ An important aspect of seismic catalogs is their completeness. This characterist
 
 The start-year of completeness is commonly identified by inspection. A simple approach used by \citet{Frankel1995} and others is to select the year at which a plot of the cumulative number of events with respect to time becomes (or starts to resemble) a straight line. This is done for different magnitude ranges. Following this approach, we determined the year of completeness for magnitude ranges 3--4, 4--5, 5--6 and 6--7. Our choices are illustrated in Fig.~\ref{fig:completeness}, where we show the normalized cumulative number of events with time for each of the seismic zones and magnitude ranges, and indicate our selection of the year of completeness in each case. The values shown in this figure and those corresponding to the uniform model of the entire region of interest are summarized in Table \ref{tab:completeness}. For events $M_w>7$, in which case there are insufficient data to determine a proper threshold, we assumed the catalog to be complete from the earliest time at which there is record of large magnitude earthquakes. 
 
-Determining the completeness magnitude $M_c$, on the other hand, is often determined using simple numerical analysis in combination with data inspection. Two common approaches are maximum curvature and the goodness-of-fit test methods. \myrevision{Both methods have been used extensively at previous studies}.The maximum curvature method, or MAXC for simplicity, is widely used because as it has been implemented in the ZMAP software package for seismic hazard analysis developed by \citet{Wiemer2001}. \citet{Zare2014}, for instance, used this software to identify $M_c$ values for the different regions of the Middle East. \myrevison{\citet{Moscheti2015} applied a combination of methods to study the  long-term earthquake rate model for the Central and Eastern United States.} We use the goodness-of-fit test method introduced by \citet{Wiemer2000}, and compute $M_c$ for different catalog-time intervals, namely 1800--1899, 1900--1999, 2000--2015, and for the complete regional catalogs.
+Determining the completeness magnitude $M_c$, on the other hand, is often determined using simple numerical analysis in combination with data inspection. Two common approaches are maximum curvature and the goodness-of-fit test methods. \myrevision{Both methods have been used extensively at previous studies}.The maximum curvature method, or MAXC for simplicity, is widely used because as it has been implemented in the ZMAP software package for seismic hazard analysis developed by \citet{Wiemer2001}. \citet{Zare2014}, for instance, used this software to identify $M_c$ values for the different regions of the Middle East. \myrevision{\citet{Moschetti2015} applied a combination of methods to study the  long-term earthquake rate model for the Central and Eastern United States.} We use the goodness-of-fit test method introduced by \citet{Wiemer2000}, and compute $M_c$ for different catalog-time intervals, namely 1800--1899, 1900--1999, 2000--2015, and for the complete regional catalogs.
 
 We defined these year intervals based on the data magnitude-time distribution (see Fig.~\ref{fig:scatter}) and the idea of distinguishing between historical, early-instrumental, and modern-instrumental catalogs. Having augmented the original catalog with $M>3$ earthquakes beginning in 2000 also influenced our choice of the intervals because at this point the uniformity of the catalog is altered. Last, we also computed $M_c$ values for the complete regional catalogs, but in this case, in order to maintain uniformity throughout time, we only considered $M>4$ events. Fig.~\ref{fig:mc} illustrates the selection of $M_c$ for the case of the main three northern Iran seismic regions, and Table \ref{tab:completeness} presents the final selection of $M_c$ values for these and the other regions, including the uniform northern Iran model for the complete region of interest.
 
