--- a/results.tex
+++ b/results.tex
@@ -47,7 +47,7 @@ With this in mind, we make the following additional consideration. No one model 
 As it can be seen in Fig.~\ref{fig:pga.ru.std}, the combined (R,U) model follows more closely the distribution of the region's seismicity shown in Fig.~\ref{fig:catalog} as well as the major faults shown in Fig.~\ref{fig:selected}a. It displays well the contribution of the North Tabriz Fault system in the Azerbaijan region as well as the contribution of the North Alborz fault in the Alborz region and that of the different faults in the Kopeh Dagh region. In Fig.~\ref{fig:pga.ru.std}, the highest PGAs are observed in the (R,U)2 model results, where the expected accelerations are of the order of 1.0 g to the northwest of \myrevision{the} city of Tabriz. These maximum values should, nonetheless, be interpreted with caution given the fact that predictions are based on rock-site assumptions and do not include any kind of site effects or other related conditions which may often contribute to mitigating peak accelerations.
 
 \myrevision{%
-We also note that the overall distribution of mean PGA pattern agrees with the recent study by \citet{Khodaverdian_2016_BSSA}. However, in general, their results are slightly lower than this study. They provided a rough estimate of the PGA, and the seismicity parameters, like completeness magnitude, the catalog, $M_{max}$, and $b-value$ are different in these two studies.  Consequently, we don't expect to match the results. For example  in case of $b-value$, in the same study region, \citet{Khodaverdian_2016_BSSA} reported very high variation of $b-value$ (0.56 - 1.27).  56\% of grid points have $b-value > 1$ and 53 \% of them are greater than 1.1.  Where in this study the $b-value$ has a narrow range of variation (0.93-1.15).  These estimates also agree, on average, with other studies. For the Azerbaijan tectonic seismic region for the city of Uremia, we found 0.24 g which is slightly lower than \citet{BHRC2014} and \citet{Zare2012} and higher than \citet{Khodaverdian_2016_BSSA} for 10 \% probability of exceedance in 50 years. For a 2\% probability of exceedance in 50 years, \citet{Golara2014} expected acceleration on the order of 0.3 - 0.5 g, where or mean value is 0.38 g. For the city of Tabriz, the results match with \citet{BHRC2014} and are in the range of \citet{Zare2012} for 10 \% probability of exceedance in 50 years.  \citet{Vafaie2011} expected accelerations on the order of 0.30--0.90 and 0.20--0.65 g for 2 and 10\% probability of exceedance in 50 years, respectively, where our mean values are about 0.61 and 0.35 g for the same corresponding probabilities. For the city of Ardabil, we found 0.73 g and 0.43 g for 2 and 10\% probability of exceedance in 50 years.  Our results are slightly higher than \citet{BHRC2014}, however, for 10\% probability of exceedance in 50 years, the results are in the range reported by \citet{Zare2012}. For 2\% probability of exceedance in 50 years, our results are very close to \citet{Golara2014} and \citet{Khodaverdian_2016_BSSA}. In the Alborz tectonic seismic region for the city of Rasht, our results are in a well agreement with the recent study of \citet{Abdollahzadeh2014}. For the city of Tehran, the results are in agreement with \citet{Abdi2013}, and slightly lower than  \citet{BHRC2014}, \citet{Za2012}, and \citet{Golara2014} for 10\% probability of exceedance in 50 years. For 2\% 10\% probability of exceedance in 50 years, our results are lower than \citet{Golara2014} and higher than \citet{Khodaverdian2015}. For the Kopeh Dagh tectonic seismic region for the city of Mashhad, results are lower than \citet{BHRC2014} and higher than \citet{Khodaverdian_2016_BSSA}.}
+We also note that the overall distribution of mean PGA pattern agrees with the recent study by \citet{Khodaverdian_2016_BSSA}. However, in general, their results are slightly lower than this study. They provided a rough estimate of the PGA, and the seismicity parameters, like completeness magnitude, the catalog, $M_{max}$, and $b-value$ are different in these two studies.  Consequently, we don't expect to match the results. For example  in case of $b-value$, in the same study region, \citet{Khodaverdian_2016_BSSA} reported very high variation of $b-value$ (0.56 - 1.27).  56\% of grid points have $b-value > 1$ and 53 \% of them are greater than 1.1.  Where in this study the $b-value$ has a narrow range of variation (0.93-1.15).  They computed the seismicity parameters for each grid point inside a circle with radius of 200 around the grid point, whereas in this study we considered a uniform seismicity parameters for each region. These estimates also agree, on average, with other studies. For the Azerbaijan tectonic seismic region for the city of Uremia, we found 0.24 g which is slightly lower than \citet{BHRC2014} and \citet{Zare2012} and higher than \citet{Khodaverdian_2016_BSSA} for 10 \% probability of exceedance in 50 years.  \citet{Zare2012} expected to see higher values because of using parametric method. For a 2\% probability of exceedance in 50 years, \citet{Golara2014} expected acceleration on the order of 0.3 - 0.5 g, where or mean value is 0.38 g. For the city of Tabriz, the results match with \citet{BHRC2014} and are in the range of \citet{Zare2012} for 10 \% probability of exceedance in 50 years.  \citet{Vafaie2011} expected accelerations on the order of 0.30--0.90 and 0.20--0.65 g for 2 and 10\% probability of exceedance in 50 years, respectively, where our mean values are about 0.61 and 0.35 g for the same corresponding probabilities. For the city of Ardabil, we found 0.73 g and 0.43 g for 2 and 10\% probability of exceedance in 50 years.  Our results are slightly higher than \citet{BHRC2014}, however, for 10\% probability of exceedance in 50 years, the results are in the range reported by \citet{Zare2012}. For 2\% probability of exceedance in 50 years, our results are very close to \citet{Golara2014} and \citet{Khodaverdian_2016_BSSA}. In the Alborz tectonic seismic region for the city of Rasht, our results are in a well agreement with the recent study of \citet{Abdollahzadeh2014}. For the city of Tehran, the results are in agreement with \citet{Abdi2013}, and slightly lower than  \citet{BHRC2014}, \citet{Zare2012}, and \citet{Golara2014} for 10\% probability of exceedance in 50 years. For 2\% 10\% probability of exceedance in 50 years, our results are lower than \citet{Golara2014} and higher than \citet{Khodaverdian_2016_BSSA}. For the Kopeh Dagh tectonic seismic region for the city of Mashhad, results are lower than \citet{BHRC2014} and higher than \citet{Khodaverdian_2016_BSSA}.}
 
 
 %We also note that the overall distribution of mean PGA  agree, on average, with other previous studies. For the north-west seismic regions of Azerbaijan and Zagros, for instance, \citet{Tavakoli1999} predicts maximum mean PGA (10\% in 50 years) values of 0.45 g near the North Tabriz Fault and the North Tehran Fault zones, where we find equivalent values to be between 0.35 and 0.50 g in the (R,U)10 model. Similarly, for the particular case of the city of Tabriz, \citet{Vafaie2011} obtained slightly higher expected accelerations on the order of 0.30--0.90 and 0.20--0.65 g for 2 and 10\% \myrevision{in 50 years}, respectively, where our mean values are about 0.53 and 0.36 g for the same corresponding probabilities. In the north-central region of Alborz, \citet{Ghodrati2003} and \citet{Boostan2015} predict PGA values of the order 0.27--0.46 g and 0.42--0.48 g for Tehran, where we found equivalent results to be about 0.25--0.35 g for a 10\% probability of exceedance \myrevision{in 50 years}. The latter estimate is in good agreement with \citet{Abdi2013}, who predicts PGA values in the vicinity of Karaj and Tehran to be on the order of 0.27--0.31 g for \myrevision{the same exceedance probability}. Results from \citet{Ghodrati2008} for the Gilan province around the city of Rasht are also on the same order of those shown in Fig.~\ref{fig:pga.ru.std}. Finally, for the city of Bojnurd in the northeast province of Khorasan in the Kopeh Dagh seismic region, \citet{Rahgozar2012} reports expected PGA values in the ranges of 0.28--0.49 and 0.15--0.22 g for 2 and 10\% \myrevision{in 50 years}, where we obtain mean values of 0.51 and 0.34 g, respectively.
@@ -70,4 +70,4 @@ Following the comparisons shown in Table \ref{tab:pga}, we looked into the more 
 \end{figure}
 
 \myrevision{%
-Last, we put additional attention on the results for the capital city of Tehran. We compare hazard curves obtained in this study against those computed by \citet{Ghodrati2003} and \citet{Boostan2015} as well as ranges from other studies for 2 and 10\% probability of exceedance in 50 years. Our results are similar to those obtained by \citet{Boostan2015} in the range between 0.1 and 0.3 g (corresponding to annual probabilities of exceedance between $10^{-3}$ and $10^{-1}$), and then it is in the mean range of the mentioned studies.  Conversely, the trend in the hazard curve from \citet{Boostan2015} suggest the city is to expect significantly higher levels of ground motion at higher probability rates, which is contrary to our findings and those of \citet{Ghodrati2003}. Expected PGA range of other studies mentioned at the \ref{tab:pga}, represents, on average, our study presents trustable results. The shaded area, represents the upper and lower value of uncertainty at the GMPEs. In other word the upper part edge is calculated by just considering GMPEs+Unc  and the lower edge is calculated by just considering GMPEs-Unc. It perfectly represents that almost all studies are in the range of uncertainty of the GMPEs, and using one appropriate backbone GMPE as well as the uncertainties could have better role in considering the epistemic uncertainty than using multiple GMPEs as \citet{Atkinson2014} concluded.}
+Last, we put additional attention on the results for the capital city of Tehran. We compare hazard curves obtained in this study against those computed by \citet{Ghodrati2003} and \citet{Boostan2015} as well as ranges from other studies for 2 and 10\% probability of exceedance in 50 years. By applying different combination of magnitude (M) and distance (R), \citet{Boostan2015} presented a new model for probabilistic seismic hazard assessment based on fuzzy sets theory for Tehran, Iran. They expected to achieve higher seismic hazard values because of considering a vast uncertainty range for R and M. They concluded, non-fuzzy approaches due to not considering all uncertainties leads to non-conservative results. \citet{Ghodrati2003} conducted a probabilistic seismic hazard analysis for the same region based on considering the uncertainty in seismicity value and ground motion level through logic tree approach. They consider the uncertainty in seismicity parameters by involving the results of \citet{Tavakoli1999}. \citet{Tavakoli1999} reported the $b-value$ and $M_{max}$ as $0.52\pm0.02$ and $7.9\pm0.3$, respectively, which is fairly different from the result of this study. Even though   \citet{Ghodrati2003} used three GMPEs model,  \citet{Boostan2015} used only one model as attenuation relationship. As we discussed earlier, our model fairly well consider the ground motion level uncertainty.  Our results are similar to those obtained by \citet{Boostan2015} in the range between 0.1 and 0.3 g (corresponding to annual probabilities of exceedance between $10^{-3}$ and $10^{-1}$), and then it is in the mean range of the mentioned studies.  Conversely, the trend in the hazard curve from \citet{Boostan2015} suggest the city is to expect significantly higher levels of ground motion at higher probability rates, which is contrary to our findings and those of \citet{Ghodrati2003}. Expected PGA range of other studies mentioned at the \ref{tab:pga}, represents, on average, our study presents trustable results. The shaded area, represents the upper and lower value of uncertainty at the GMPEs. In other word the upper part edge is calculated by just considering GMPEs+Unc  and the lower edge is calculated by just considering GMPEs-Unc. It perfectly represents that almost all studies are in the range of uncertainty of the GMPEs, and using one appropriate backbone GMPE as well as the uncertainties could have better role in considering the epistemic uncertainty than using multiple GMPEs as \citet{Atkinson2014} concluded.}
